@@ -1,3 +1,7 @@
+2007-01-18 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* CamelliaTransform.cs: r1847での戻し忘れ
+
 2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* CamelliaTransformLE.cs: インライン展開による最適化 (キースケジューリング部を重点的に)
